[gd_scene load_steps=4 format=3 uid="uid://dekhu16yta1d"]

[ext_resource type="Script" path="res://objects/interface/IntroScene.gd" id="1_unra5"]
[ext_resource type="Texture2D" uid="uid://cgw3jidkyd215" path="res://assets/intro/intro_slide_X.png" id="2_fo0q5"]
[ext_resource type="FontFile" uid="uid://dy3m072uqs5yk" path="res://assets/fonts/m3x6.ttf" id="3_v624k"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_unra5")

[node name="BackgroundMainMenu" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 4459.0
offset_bottom = 2354.0
color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 76

[node name="Seperator2" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Seperator" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator2" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NarrationPicture" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_fo0q5")
stretch_mode = 2

[node name="Narration" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_v624k")
horizontal_alignment = 1

[node name="Seperator" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="SkipButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Skip"

[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
